--- a/Project 2/wrangle_act.ipynb
+++ b/Project 2/wrangle_act.ipynb
@@ -72,7 +72,12 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "#"
+   ]
   },
   {
    "cell_type": "markdown",
