--- a/Project 2/wrangle_act.ipynb
+++ b/Project 2/wrangle_act.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -62,32 +62,14 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "335079"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "#"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "2. Use the Requests library to download the tweet image prediction (image_predictions.tsv)"
+    "\n",
+    "# import twitter csv file\n",
+    "df_twitter = pd.read_csv(\"twitter-archive-enhanced-2.csv\")"
    ]
   },
   {
@@ -95,11 +77,44 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Using the tweepy library\n",
+    "\n",
+    "import tweepy\n",
+    "\n",
+    "consumer_key = \"oni8ldMq6eWdFqmzEkKNxXeb0\"\n",
+    "consumer_secret = \"vNt4abBD2o9tCmxdtgshuNI3PdDyFjKIL3u9KYfeGAHrytR1l2\"\n",
+    "access_token = \"1502948607590293511-9Svf54OCv9yQm2itxQmFems5SCU3Tg\"\n",
+    "access_secret = \"bw1lyprOfhEAGzRRxF2n3l3Je39YBvTjdMJdTiaObIMfn\"\n",
+    "\n",
+    "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
+    "auth.set_access_token(access_token, access_secret)\n",
+    "\n",
+    "api  = tweepy.API(auth, wait_on_rate_limit=True)\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "page_no_exit = []\n",
+    "retweet_count_add_favorite_count = []\n",
+    "\n",
+    "with open('tweet_json.txt', mode='w') as file:\n",
+    "    for i in list(df_twitter.tweet_id):\n",
+    "        try:\n",
+    "            tweet = api.get_status(str(i))\n",
+    "            file.write(json.dumps(tweet._json))\n",
+    "            retweet_count_add_favorite_count.append({\n",
+    "                \"tweet_id\": str(i),\n",
+    "                \"retweet_count\":tweet._json['retweet_count'],\n",
+    "                \"favorite_count\": tweet._json['favorite_count']\n",
+    "            })\n",
+    "        except:\n",
+    "            page_no_exit.append(i)"
+   ]
   },
   {
    "cell_type": "markdown",
