adding image_prediction file

--- a/Project 2/wrangle_act.ipynb
+++ b/Project 2/wrangle_act.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -59,7 +59,8 @@
      }
     },
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -117,12 +118,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "source": [],
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "len(retweet_count_add_favorite_count)len(page_no_exit)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "retweet_count_add_favorite_count = pd.DataFrame(retweet_count_add_favorite_count, columns=['tweet_id', 'retweet_count', 'favorite_count'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
