--- a/Project 2/wrangle_act.ipynb
+++ b/Project 2/wrangle_act.ipynb
@@ -75,11 +75,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -138,6 +137,31 @@
    "outputs": [],
    "source": [
     "retweet_count_add_favorite_count = pd.DataFrame(retweet_count_add_favorite_count, columns=['tweet_id', 'retweet_count', 'favorite_count'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# save the image_prediction.tsv file and load it as image_predict\n",
+    "\n",
+    "import requests\n",
+    "\n",
+    "url = \"https://d17h27t6h515a5.cloudfront.net/topher/2017/August/599fd2ad_image-predictions/image-predictions.tsv\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "with open('image-prediction.tsv', mode='wb') as file:\n",
+    "    file.write(response.content)\n",
+    "\n",
+    "df_image_predict = pd.read_csv(\"image-prediction.tsv\", sep=\"\\t\")"
    ],
    "metadata": {
     "collapsed": false,
