--- a/Project 2/wrangle_act.ipynb
+++ b/Project 2/wrangle_act.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -59,8 +59,7 @@
      }
     },
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -74,10 +73,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "3. Use the Tweepy library to query additional data via the Twitter API (tweet_json.txt)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -118,37 +130,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "len(retweet_count_add_favorite_count)len(page_no_exit)"
-   ],
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 2356)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(retweet_count_add_favorite_count), len(page_no_exit)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "retweet_count_add_favorite_count = pd.DataFrame(retweet_count_add_favorite_count, columns=['tweet_id', 'retweet_count', 'favorite_count'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# save the image_prediction.tsv file and load it as image_predict\n",
@@ -162,14 +192,7 @@
     "    file.write(response.content)\n",
     "\n",
     "df_image_predict = pd.read_csv(\"image-prediction.tsv\", sep=\"\\t\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,19 +201,6 @@
      "name": "#%% md\n"
     }
    },
-   "source": [
-    "3. Use the Tweepy library to query additional data via the Twitter API (tweet_json.txt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
    "source": []
   },
   {
@@ -236,11 +246,14 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_image_predict.sample(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -596,7 +609,7 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -610,7 +623,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "044bd8377869109dcb093f44f850f98d78c1f8adfffaaaa1f0128c3238e36a11"
+   }
   }
  },
  "nbformat": 4,
