done with notebook

--- a/Project 2/wrangle_act.ipynb
+++ b/Project 2/wrangle_act.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": true,
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -179,7 +179,19 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m/home/eben-success/DataspellProjects/Project_2_Data_Wrangling_(tweets)/Project 2/wrangle_act.ipynb Cell 8\u001B[0m in \u001B[0;36m<cell line: 11>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      <a href='vscode-notebook-cell:/home/eben-success/DataspellProjects/Project_2_Data_Wrangling_%28tweets%29/Project%202/wrangle_act.ipynb#ch0000007?line=7'>8</a>\u001B[0m \u001B[39mwith\u001B[39;00m \u001B[39mopen\u001B[39m(\u001B[39m'\u001B[39m\u001B[39mimage-prediction.tsv\u001B[39m\u001B[39m'\u001B[39m, mode\u001B[39m=\u001B[39m\u001B[39m'\u001B[39m\u001B[39mwb\u001B[39m\u001B[39m'\u001B[39m) \u001B[39mas\u001B[39;00m file:\n\u001B[1;32m      <a href='vscode-notebook-cell:/home/eben-success/DataspellProjects/Project_2_Data_Wrangling_%28tweets%29/Project%202/wrangle_act.ipynb#ch0000007?line=8'>9</a>\u001B[0m     file\u001B[39m.\u001B[39mwrite(response\u001B[39m.\u001B[39mcontent)\n\u001B[0;32m---> <a href='vscode-notebook-cell:/home/eben-success/DataspellProjects/Project_2_Data_Wrangling_%28tweets%29/Project%202/wrangle_act.ipynb#ch0000007?line=10'>11</a>\u001B[0m df_image_predict \u001B[39m=\u001B[39m pd\u001B[39m.\u001B[39mread_csv(\u001B[39m\"\u001B[39m\u001B[39mimage-prediction.tsv\u001B[39m\u001B[39m\"\u001B[39m, sep\u001B[39m=\u001B[39m\u001B[39m\"\u001B[39m\u001B[39m\\t\u001B[39;00m\u001B[39m\"\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# save the image_prediction.tsv file and load it as image_predict\n",
     "\n",
@@ -490,24 +502,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2075, 12)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# the number of rows and columsn in teh datasets\n",
     "df_image_predict.shape"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "There are 2075 rows and 12 columns in the dataset"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# number of duplicated   row in   the dataset\n",
+    "sum(df_image_predict  .duplicated())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "There is no duplicated value in the datase"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# inspecting the data\n",
+    "\n",
+    "df_image_predict.info()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# viiew twitter dataset\n",
+    "df_twitter.head(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# number  of rows and columsn in  dataset\n",
+    "\n",
+    "df_twitter.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# inspecting the data\n",
+    "\n",
+    "df_twitter.info()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# number of duplicated values in the data\n",
+    "sum(df_twitter.duplicated())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "There is no duplicated value in the data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sum(df_twitter.source.duplicated())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_twitter.describe()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "retweet_count_and_favorite_count"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Quality issues\n",
+    "1.\n",
+    "\n",
+    "2.\n",
+    "\n",
+    "3.\n",
+    "\n",
+    "4.\n",
+    "\n",
+    "5.\n",
+    "\n",
+    "6.\n",
+    "\n",
+    "7.\n",
+    "\n",
+    "8."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -794,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +1031,7 @@
        "(2356, 17)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +1095,7 @@
        "0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +1123,7 @@
        "2352"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1075,15 +1303,15 @@
      "evalue": "name 'retweet_count_and_favorite_count' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/eben-success/DataspellProjects/Project_2_Data_Wrangling_(tweets)/Project 2/wrangle_act.ipynb Cell 24\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/eben-success/DataspellProjects/Project_2_Data_Wrangling_%28tweets%29/Project%202/wrangle_act.ipynb#ch0000049?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(retweet_count_and_favorite_count\u001b[39m.\u001b[39mhead(\u001b[39m5\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'retweet_count_and_favorite_count' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m/home/eben-success/DataspellProjects/Project_2_Data_Wrangling_(tweets)/Project 2/wrangle_act.ipynb Cell 24\u001B[0m in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> <a href='vscode-notebook-cell:/home/eben-success/DataspellProjects/Project_2_Data_Wrangling_%28tweets%29/Project%202/wrangle_act.ipynb#ch0000049?line=0'>1</a>\u001B[0m retweet_count_and_favorite_count\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'retweet_count_and_favorite_count' is not defined"
      ]
     }
    ],
    "source": [
-    "print(retweet_count_and_favorite_count.head(5))"
+    "retweet_count_and_favorite_count"
    ]
   },
   {
